--- a/GiGte.Rmd
+++ b/GiGte.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Start Writing Manuscripts in Rmarkdown..."
-author: Jenna Hamlin
+author: Jenna Hamlin - ptx4@cdc.gov
+date: April 6, 2020
 subtitle: ...especially if you already know R
 output:
   powerpoint_presentation:
@@ -32,29 +33,29 @@ output:
 
 # YAML 
 
-![Yet Another Markup Language (YAML) - specify key information to be used when producing the final document (i.e. powerful for formatting)](/Users/jennahamlin/Desktop/GiGte/images/yamlImage.png)
+![Yet Another Markup Language (YAML) - specify key information to be used when producing the final document - powerful for formatting.](/Users/jennahamlin/Desktop/GiGte/images/yamlImage.png)
 
 # Using a word document template
 
-![Many journals and colleagues prefer to read and receive manuscripts as DOCX files. With a template the created DOCX is formatted as desired every time.](/Users/jennahamlin/Desktop/GiGte/images/docxTemplate.png)
+![Many journals and colleagues prefer to read and receive manuscripts as DOCX files. With a template, the created DOCX is formatted as desired every time.](/Users/jennahamlin/Desktop/GiGte/images/docxTemplate.png)
 
 # Equations and other formatting with LaTeX
 
-![LaTeX produces highly professional looking equations](/Users/jennahamlin/Desktop/GiGte/images/latexImage.png)
+![LaTeX produces highly professional looking equations and can be used for additional formatting requirements placed in YAML.](/Users/jennahamlin/Desktop/GiGte/images/latexImage.png)
 
 # Analyses using R code 
 
-![Integrate R code (R chunks) directly avoiding the need to awkwardly copy-paste analyses, tables, or figures](/Users/jennahamlin/Desktop/GiGte/images/integrateRCode.png)
+![Integrate R code (R chunks) directly avoiding the need to awkwardly copy-paste analyses, tables, or figures.](/Users/jennahamlin/Desktop/GiGte/images/integrateRCode.png)
 
 # Analyses using R code 2
 
-![embed figures directly into Rmarkdown documents](/Users/jennahamlin/Desktop/GiGte/images/rCodeChunks.png)
+![Embed figures directly into Rmarkdown documents and update code as necesary.](/Users/jennahamlin/Desktop/GiGte/images/rCodeChunks.png)
 
 # Integrating references with BibTeX
 
 :::::::::::::: {.columns}
 ::: {.column}
-Each references has a unique ‘key’ used within Rmd files (e.g. [@author]) and willautomatically building the reference section
+Each reference has a unique ‘key’ used within Rmd files (e.g. [@author]) that  will automatically build the reference section. 
 :::
 ::: {.column}
 ![](/Users/jennahamlin/Desktop/GiGte/images/refsBib.png)
@@ -63,25 +64,38 @@ Each references has a unique ‘key’ used within Rmd files (e.g. [@author]) an
 
 # Formatting using CSL files
 
-![CSL - Citation Style Language - essentially text files that tell the Rmarkdown file how to use the information in the BibTeX file to build the citations that are journal specific](/Users/jennahamlin/Desktop/GiGte/images/cslPage.png)
+![CSL - Citation Style Language - essentially text files that tell the Rmarkdown file how to use the information in the BibTeX file to build the citations that are journal specific.](/Users/jennahamlin/Desktop/GiGte/images/cslPage.png)
 
 
 # Incorporating version control with git/github
 
-![manage, share, document, file backups, exporsure, collaborate, etc..](/Users/jennahamlin/Desktop/GiGte/images/gitImage.png)
+![Manage, share, document, file backups, exporsure, collaborate all while using R and Rmarkdown.](/Users/jennahamlin/Desktop/GiGte/images/gitImage.png)
 
+# Access Rmarkdown at CDC
 
-# Quick look at a manuscript - dummy Rmarkdown document
+* log onto monolith3.biotech.cdc.gov - I have checked this one 
+* module load R/3.6.1
+* rstudio
+
+# Quick look at a manuscript 
+
+Using the dummy Rmarkdown document
 
 # Links 
 * markdown https://rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf)
 * rmarkdown https://rmarkdown.rstudio.com/lesson-1.html
 * rmarkdown cheat sheet https://rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf
+
+# Links page 2
 * rmarkdown book https://bookdown.org/yihui/rmarkdown/powerpoint-presentation.html#ppt-templates
 * r chunks https://garrettgman.github.io/rmarkdown/authoring_rcodechunks.html
-* template https://support.office.com/en-us/article/create-a-template-86a1d089-5ae2-4d53-9042-1191bce57deb
+* version control with git/github https://happygitwithr.com/
+
+# Links page 3
 * equations https://en.wikibooks.org/wiki/LaTeX/Mathematics
 * references https://rmarkdown.rstudio.com/authoring_bibliographies_and_citations.html
 * csl https://github.com/citation-style-language/styles
-* version control with git/github https://happygitwithr.com/
-* https://stirlingcodingclub.github.io/Manuscripts_in_Rmarkdown/Rmarkdown_notes.html
+
+# Links page 4
+* template https://support.office.com/en-us/article/create-a-template-86a1d089-5ae2-4d53-9042-1191bce57deb
+* helpful site https://stirlingcodingclub.github.io/Manuscripts_in_Rmarkdown/Rmarkdown_notes.html
